pkl-core/src/test/files/LanguageSnippetTests/input/errors/wrongForGeneratorType2.pkl
res1 = new Mapping {
  for (n: Int in List(1, "other", 2)) { [n] = n }
}